--- a/css/main.css
+++ b/css/main.css
@@ -1548,7 +1548,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #f5d7a1;
+  background: #700160;
 }
 .links-of-blogroll {
   font-size: 13px;
