--- a/word/base.css
+++ b/word/base.css
@@ -41,25 +41,26 @@ div.page {
 		color: #555555;
 		font-size: 15px;
 		text-align: right;
-		padding-right: 8%;
+		padding-right: 35px;
 	} 
 	p.time {
 		color: #555555;
 		font-size: 12px;
 		text-align: right;
 		margin-top: -10px;
-		padding-right: 8%;
+		padding-right: 35px;
 	}
 	a.note{
 		color: #555555;
 		font-size: 15px;
 	}
-	img.arrow{
+	img.next{
 		width:30px;
 		position:absolute;
 		bottom:20px;
 		left: 50%;
 		margin-left: -20px;
+		animation:next 1s linear infinite running;
 	}
 }   
 /*PC*/  
@@ -90,7 +91,7 @@ div.page {
 		color: #555555;
 		font-size: 30px;
 		text-align: right;
-		padding-right: 15%;
+		padding-right: 70px;
 	}
 	a.note{
 		color: #555555;
@@ -100,14 +101,20 @@ div.page {
 		color: #555555;
 		font-size: 24px;
 		text-align: right;
-		padding-right: 15%;
+		padding-right: 70px;
 		margin-top: -20px;
 	}
-	img.arrow{
-		width:50px;
+	img.next{
+		width:38px;
 		position:absolute;
 		bottom:20px;
 		left: 50%;
 		margin-left: -25px;
+		animation:next 1s linear infinite running;
 	}
 }
+
+@keyframes next{
+		    0% {bottom:20px;}
+		    100% {bottom:5px;}
+		}
